assets/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.cdnfonts.com/css/helvetica-neue-5");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  font-family: "Helvetica Neue", sans-serif;
  font-size: 16px;
}
*,
*:after,
*:before {
  box-sizing: border-box;
}
html {
  overflow: visible !important;
  padding: 0 !important;
}

@layer components {
  .max-container {
    @apply mx-auto w-[calc(100%-40px)] max-w-[1920px] md:w-[calc(100%-80px)];
  }

  .blog-container {
    @apply w-[calc(100%-40px)] max-w-[1140px] md:w-[calc(100%-80px)];
    margin-inline: auto;
  }
}

.hero-bg {
  background-image: url(../images/hero-bg.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  max-width: 1920px;
  width: 100%;
  margin: 0 auto;
}
.hero-bg::before {
  position: absolute;
  inset: 0;
  content: "";
  background-color: rgb(0, 0, 0, 0.5);
}
.wrap-balance {
  text-wrap: balance;
}

.about-us-table * {
  font: inherit;
  color: inherit;
}
.about-us-table p {
  @apply text-[13px] md:text-[24px] 2xl:text-[32px];
}

@layer utilities {
  .section-title {
    @apply text-center text-2xl font-bold leading-[110%] text-primary md:text-4xl md:leading-[120%] lg:text-[44px] 2xl:text-[64px];
  }
  .section-title a {
    font: inherit;
  }
}

.react-tabs__tab--selected {
  text-decoration: underline;
}

.login-input {
  @apply block w-full rounded-[5px] border border-gray-dark p-3 text-[14px] leading-[24px] xl:p-3 xl:text-lg extraWide:p-[23px_20px] extraWide:text-xl;
}
.label-text {
  @apply mb-[10px] text-sm font-light leading-[24px] text-gray-light lg:text-[14px];
}

/* profile menu */
.menu-link {
  @apply cursor-pointer text-[14px] font-light leading-[110%] text-black no-underline;
}
.drop-menu-link {
  @apply mb-[20px] text-base font-bold uppercase text-gray-dark hover:text-primary;
}

/* settings page */
.settings-label {
  @apply mb-[10px] text-[14px] font-bold leading-[24px] text-gray-dark;
}
.settings-input {
  @apply rounded-[5px] border border-gray-dark px-[30px] py-[20px] text-gray-dark outline-none focus-visible:outline-primary;
}

/* create project form page */
.form-label {
  @apply mb-[10px] w-[180px] text-wrap text-[14px] font-bold leading-[120%] text-gray-dark md:mb-0 md:text-[18px];
}
.form-input-box {
  @apply min-h-[50px] flex-[0_1_850px] overflow-clip rounded-[5px] border border-gray-dark outline-none has-[:active]:outline-primary has-[:focus-visible]:outline-primary has-[:focus]:outline-primary;
}
.form-input {
  @apply w-full border-none px-[20px] py-[20px] font-helvetica text-base font-light leading-[120%] text-gray-dark md:px-[30px];
}
.select-arrow {
  border: 0;
  vertical-align: middle;
  background: transparent;
  -webkit-appearance: none;
  appearance: none;

  background-image: url(../images/svg/dropdownArrow.svg);
  background-repeat: no-repeat;
  background-position-x: right 30px;
  background-position-y: center;
}
.css-13cymwt-control {
  @apply block w-full rounded-[5px] border border-gray-dark p-2 text-[14px] leading-[20px] xl:p-3 xl:text-lg extraWide:p-[23px_20px] extraWide:text-xl;
}
.react-tabs__tab-list,
.react-tabs__tab--selected {
  border: 0 !important;
  outline: none;
}
.react-tabs__tab--selected {
  color: #79a471 !important;
  opacity: 1 !important;
}
.react-tabs__tab-list {
  display: flex;
  gap: 20px;
}
.react-tabs__tab {
  padding: 0 !important;
}

/* Chat */

.chat .chat-content::-webkit-scrollbar {
  display: none;
}

.company-subs::-webkit-scrollbar {
  height: 3px;
  width: 10px;
}
/* Track */
.company-subs::-webkit-scrollbar-track {
  background: #ccc;
  border-radius: 50px;
}

/* Handle */
.company-subs::-webkit-scrollbar-thumb {
  background: transparent;
  border-radius: 50px;
}
.multigraph:before {
  content: "";
  width: 262px;
  height: 131px;
  position: absolute;
  border: 30px solid rgba(0, 0, 0, 0.1);
  border-radius: 262px 262px 0 0;
  border-bottom: none;
}

.graph {
  width: 262px;
  height: 131px;
  position: absolute;
  overflow: hidden;
}
.graph:before,
.graph:after {
  width: 262px;
  height: 131px;
  position: absolute;
  top: 100%;
  border: 30px solid #79a471;
  content: "";
  border-radius: 0 0 262px 262px;
  border-top: none;
  animation: demo 3s;
  transform-origin: center top;
}
@keyframes demo {
  0% {
    transform: rotate(0deg);
  }
  50% {
    transform: rotate(180deg);
  }
}

